# CorpMind-Enterprise-knowledge-assistant-using-RAG

./: .env.example  .gitignore  README.md  pyproject.toml
corp_mind/: client.py  config.py  embeddings.py
evaluation/: eval.py
implementation/: answer.py  ingest.py
pro_implementation/: answer.py  ingest.py
