[project]
name = "corp-mind"
version = "0.1.0"
description = "Enterprise knowledge assistant using RAG with Gemini"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0",
    "gradio>=5.47.2,<6.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-text-splitters>=0.3.11",
    "openai>=1.109.0",
    "pandas>=2.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.0.0",
    "tqdm>=4.67.0",
]

[tool.uv]
package = false
